--- a/_sass/hm-easyumzug/_type.scss
+++ b/_sass/hm-easyumzug/_type.scss
@@ -23,3 +23,15 @@ a:not(.no-icon)[href^="http://"]:after, a:not(.no-icon)[href^="https://"]:after,
 .link-white {
   text-decoration: none;
 }
+
+:root {
+  @include media-breakpoint-down(md) {
+    font-size: 16px;
+  }
+}
+
+.fs-5 {
+  @include media-breakpoint-down(md) {
+    font-size: 16px;
+  }
+}
